RESOLVED FIXED 259638
REGRESSION(266403@main): http/tests/security/redirect-BLOCKED-to-localURL.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=259638
Summary REGRESSION(266403@main): http/tests/security/redirect-BLOCKED-to-localURL.htm...
Fujii Hironori
Reported 2023-07-30 14:46:17 PDT
After 266403@main (bug#258322), http/tests/security/redirect-BLOCKED-to-localURL.html is crashing for Windows and GTK ports. https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsecurity%2Fredirect-BLOCKED-to-localURL.html Buildbot: builder WinCairo-64-bit-Debug-Tests build 20673 (266404@main) https://build.webkit.org/#/builders/727/builds/20673 stderr: > ERROR: 0000025BD74BB5B0 - [pageProxyID=538, webPageID=539, PID=8768] WebPageProxy::didFailProvisionalLoadForFrame: frameID=49, isMainFrame=0, domain=WebKitErrorDomain, code=302, isMainFrame=0, willInternallyHandleFailure=0 > C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebPageProxy.cpp(5571) : WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared > ERROR: 0000025BD4C754F0 - [PID=8768] WebProcessProxy::checkURLReceivedFromWebProcess: Received an unexpected URL from the web process > C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebProcessProxy.cpp(921) : WebKit::WebProcessProxy::checkURLReceivedFromWebProcess > ERROR: C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebPageProxy.cpp 5574: Invalid message dispatched WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared > C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/WebPageProxy.cpp(5574) : WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared > ERROR: Received an invalid message 'WebPageProxy_DidFailProvisionalLoadForFrame' from the WebContent process with PID 8768 > C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\UIProcess/AuxiliaryProcessProxy.cpp(395) : WebKit::AuxiliaryProcessProxy::logInvalidMessage > ERROR: 0000025BD4C754F0 - [PID=8768] WebProcessProxy::didClose (web process crash) I confirmed reverting 266403@main fixes the problem.
Attachments
Fujii Hironori
Comment 1 2023-07-30 18:46:29 PDT
In WebPageProxy::didFailProvisionalLoadForFrameShared, in Mac port, error.failingURL() is "http://127.0.0.1:8000/resources/redirect.py?url=file:///tmp/LayoutTests/http/tests/security/resources/file-redirect-target.html". But in Windows port, it's "file:///tmp/LayoutTests/http/tests/security/resources/file-redirect-target.html". In both ports, provisionalURL is "http://127.0.0.1:8000/resources/redirect.py?url=file:///tmp/LayoutTests/http/tests/security/resources/file-redirect-target.html".
Kenji Shukuwa
Comment 2 2023-07-30 19:40:50 PDT
Radar WebKit Bug Importer
Comment 3 2023-08-06 14:47:13 PDT
Kenji Shukuwa
Comment 4 2023-08-07 22:11:11 PDT
Details of ResourceError on Mac --- FailingURL = http://127.0.0.1:8000/resources/redirect.py?url=file:///tmp/LayoutTests/http/tests/security/resources/file-redirect-target.html Domain: NSURLErrorDomain Type: General Error code: -1102 (NSURLErrorNoPermissionsToReadFile) Description: You do not have permission to access the requested resource ---
Kenji Shukuwa
Comment 5 2023-08-08 01:05:49 PDT
EWS
Comment 6 2023-08-08 13:10:01 PDT
Committed 266696@main (322a31dd1fcc): <https://commits.webkit.org/266696@main> Reviewed commits have been landed. Closing PR #16469 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.