[Win][MiniBrowser] Don't show the download dialog for subframes. https://bugs.webkit.org/show_bug.cgi?id=259638

Reviewed by NOBODY (OOPS!).

On some pages, a download dialog is displayed even though the content
is not for download since 266320@main. Refer to the SOUP port and
we modify it so that it does not download if it is a subframe.

* Source/WebKit/UIProcess/API/C/WKNavigationResponseRef.cpp:
(WKNavigationResponseGetFrameInfoRef):
* Source/WebKit/UIProcess/API/C/WKNavigationResponseRef.h:
* Tools/MiniBrowser/win/WebKitBrowserWindow.cpp:
(WebKitBrowserWindow::decidePolicyForNavigationResponse):